--- a/devops.html
+++ b/devops.html
@@ -38,6 +38,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.crelate.com/portal/devopsdna/search?locationState=ca&amp;location=sunnyvale'>RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.crelate.com/portal/devopsdna/search?locationState=ca&amp;location=san%20jose'>RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.crelate.com/portal/devopsdna/job/eb1g6degj5qgj75yjfx8wnbkkh/Contrac-Devops-SanJose-CA'>Sr. DevOps Engineer | RecruiterDNA | DevOpsDNA - Job Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Conga1/743999692325058-senior-devops-engineer'>Conga Senior DevOps Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
@@ -62,7 +74,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://upvest.join.com/jobs/261712-senior-lead-devops-engineer-m-f-d-berlin'>Job @ Upvest (Berlin): Senior/Lead DevOps Engineer... | JOIN</a></h5> 
+<h5><a href='https://upvest.join.com/jobs/261712-senior-lead-devops-engineer-m-f-d-berlin'>Job @ Upvest (Berlin): Senior/Lead DevOps Engineer... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -78,7 +90,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/avant/54d07669-c304-42aa-9f78-c27b7de48874'>Avant - Senior Software Engineer, DevOps (Remote Ok)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/avant/54d07669-c304-42aa-9f78-c27b7de48874'>Avant - Senior Software Engineer, DevOps (Remote Ok)</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -228,7 +240,7 @@ published: 18.07.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=ot7kafwO&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nVeQTKw7'>Benefitfocus Careers - Sr. DevOps Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=ot7kafwO&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nVeQTKw7'>Benefitfocus Careers - Sr. DevOps Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-25</p>
 <hr/>
@@ -257,7 +269,7 @@ leading?...</p>
 <p><span class="badge badge-light">Barcelona</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999692013375-ci-cd-automation-devops-consultant'>Devoteam CI/CD Automation  (DevOps) Consultant | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Devoteam/743999692013375-ci-cd-automation-devops-consultant'>Devoteam CI/CD Automation  (DevOps) Consultant | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -300,7 +312,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/centralway/job/oSYu9fwd'>Numbrs Personal Finance AG Careers - DevOps / Site Reliability Engineer - Luxembourg</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/centralway/job/oSYu9fwd'>Numbrs Personal Finance AG Careers - DevOps / Site Reliability Engineer - Luxembourg</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -344,7 +356,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://gengo.applytojob.com/apply/DwbfcYubnm/Operations-Engineer-DevOps'>Operations Engineer (DevOps) - Gengo - Career Page</a></h5> 
+<h5><a href='http://gengo.applytojob.com/apply/DwbfcYubnm/Operations-Engineer-DevOps'>Operations Engineer (DevOps) - Gengo - Career Page</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -362,7 +374,7 @@ term?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://oetkerdigital.join.com/jobs/264275-devops-engineer'>Job @ Oetker Digital (Berlin): DevOps Engineer | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://oetkerdigital.join.com/jobs/264275-devops-engineer'>Job @ Oetker Digital (Berlin): DevOps Engineer | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-04-05</p>
 <hr/>
@@ -408,7 +420,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://careers.jobscore.com/careers/saildrone/jobs/devops-engineer-b8ASYmRAqr6BvhaKkRyNN8'>DevOps Engineer #0103 job at Saildrone in Alameda, CA, powered by JobScore</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://careers.jobscore.com/careers/saildrone/jobs/devops-engineer-b8ASYmRAqr6BvhaKkRyNN8'>DevOps Engineer #0103 job at Saildrone in Alameda, CA, powered by JobScore</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -448,19 +460,7 @@ America. Its first product, launched in 2014, is a no-fee credit card that is fu
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Apply online for the job of DevOps Engineer at Fetchr.</p>
 <hr/>
-<h5><a href='https://www.workable.com/j/19026CFFDB'>QuadPay - Jobs: Senior Software Engineer (DevOps) - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>2 days ago ... Apply online for the job of Senior Software Engineer (DevOps) at QuadPay.</p>
-<hr/>
-<h5><a href='https://www.workable.com/j/5B53BAEF07'>OneinaMil - Jobs: DevOps Engineer - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>3 days ago ... Apply online for the job of DevOps Engineer at OneinaMil.</p>
-<hr/>
-<h5><a href='https://www.workable.com/j/8CAC4FE1D1'>Youtap Limited - Jobs: Senior DevOps Engineer - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>3 days ago ... Apply online for the job of Senior DevOps Engineer at Youtap Limited.</p>
-<hr/>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/>
 
 <!--End body here -->
 
