--- a/software.html
+++ b/software.html
@@ -39,11 +39,19 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://jobs.jobvite.com/nice-actimize-old/job/o6mbafwx'>NICE Actimize Careers - Software Engineer</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/SprySquaredInc/743999692385815-software-engineer'>Spry Squared, Inc. Software Engineer | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='https://jobs.jobvite.com/spireon/job/oKwEafwO'>Spireon Careers - Sr. Software Engineer in Test</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999692355513-sr-software-engineer-data'>Traveloka Sr. Software Engineer - Data | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Traveloka/743999692355513-sr-software-engineer-data'>Traveloka Sr. Software Engineer - Data | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -55,7 +63,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/axon/1d872e7a-63ed-4060-9980-bab37435f3f6'>Axon - Embedded Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/axon/1d872e7a-63ed-4060-9980-bab37435f3f6'>Axon - Embedded Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -91,7 +99,7 @@
 <p><span class="badge badge-light">Boulder</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4369773002'>Job Application for Software Engineer C++ - Language Modeling at SoundHound Inc.</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/soundhoundinc/jobs/4369773002'>Job Application for Software Engineer C++ - Language Modeling at SoundHound Inc.</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -167,11 +175,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/logdna/jobs/4374202002'>Job Application for Software Engineering Manager at LogDNA</a></h5> 
+<h5><a href='https://boards.greenhouse.io/logdna/jobs/4374202002'>Job Application for Software Engineering Manager at LogDNA</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/avant/54d07669-c304-42aa-9f78-c27b7de48874'>Avant - Senior Software Engineer, DevOps (Remote Ok)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/avant/54d07669-c304-42aa-9f78-c27b7de48874'>Avant - Senior Software Engineer, DevOps (Remote Ok)</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -319,6 +327,27 @@
 <p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
+<h5><a href='https://www.workable.com/j/24CCF1B9EA'>Anko - Jobs: Sr. Software Engineer - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... Apply online for the job of Sr. Software Engineer at Anko.</p>
+<hr/>
+<h5><a href='https://www.workable.com/j/7DB6392956'>CSC Generation - Jobs: Senior Software Engineer (Z Gallerie ...</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... Apply online for the job of Senior Software Engineer (Z Gallerie) at CSC 
+Generation.</p>
+<hr/>
+<h5><a href='https://pagantis.workable.com/j/3DAC8272F0'>Java Software Engineer - Internship - Apply online - Pagantis - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>6 days ago ... Apply online for the job of Java Software Engineer - Internship at Pagantis.</p>
+<hr/>
+<h5><a href='https://farmdrop.workable.com/j/906E794EDB?viewed=true'>Ruby Software Engineer - Apply online - Farmdrop - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... Apply online for the job of Ruby Software Engineer at Farmdrop.</p>
+<hr/>
+<h5><a href='https://ratesetter.workable.com/j/A219608FCA?viewed=true'>RateSetter - Jobs: Senior Software Engineer (Full Stack) - Apply online</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>4 days ago ... Apply online for the job of Senior Software Engineer (Full Stack) at RateSetter.</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/thousandeyes/jobs/1790671'>Job Application for Principal Software Engineer, Endpoint at ThousandEyes</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
@@ -361,7 +390,7 @@ well as those around you. You have a mad scientist mentality where you want?...<
 <p>3 days ago ... Design, develop and maintain software covering data-path, provisioning, 
 operational feedback and diagnostics functionality. Help bring up new systems,?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/lilium/jobs/1754713'>Job Application for Embedded Software Engineer - Platforms Software at Lilium</a></h5> 
+<h5><a href='https://boards.greenhouse.io/lilium/jobs/1754713'>Job Application for Embedded Software Engineer - Platforms Software at Lilium</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -373,7 +402,7 @@ operational feedback and diagnostics functionality. Help bring up new systems,?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/signalfx/380ba910-48a5-4ff6-b122-a537f292b53a'>SignalFx - Software Engineer -- Integrations</a></h5> 
+<h5><a href='https://jobs.lever.co/signalfx/380ba910-48a5-4ff6-b122-a537f292b53a'>SignalFx - Software Engineer -- Integrations</a></h5> 
 <p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -413,42 +442,11 @@ SmartNews, Inc.</p>
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/hc1/jobs/1794564'>Job Application for UI / Full Stack / Sr. Software Engineer  at hc1.com</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/hc1/jobs/1794564'>Job Application for UI / Full Stack / Sr. Software Engineer  at hc1.com</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/altisource/jobs/1786877'>Job Application for Senior Manager, Software Engineering at Altisource</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/4Catalyzer/743999692203401-embedded-software-engineer'>4Catalyzer Embedded Software Engineer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/lifesize/job/oRdtafwr'>Lifesize, Inc. Careers - Senior Software Engineer-Microservices</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>4 days ago ... Senior Software Engineer-Microservices. Engineering - Software Austin, Texas. 
-Apply. Description. Would you like to work on a team of talented engineers?...</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/servicenow/job/o1EV9fwt'>ServiceNow Careers - Principal Software Engineer, Database Systems</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>4 days ago ... Description. Principal Software Engineer, Database Systems. Location(s): San 
-Diego, CA or Santa Clara, CA. ServiceNow makes the world of work, work better
-?...</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/zscaler/job/oN247fwK'>Zscaler Careers - Staff Software Engineer - (C language)</a></h5> 
-<p><span class="badge badge-light">Canada Canada</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/pagerduty/f8d63db8-d916-4c95-9f85-b38e12f6ff03'>PagerDuty - Senior Software Engineer - Pipeline</a></h5> 
-<p><span class="badge badge-light">San Francisco</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/creditkarma/415f3ba3-c2b8-4e0c-a703-6ed47bc73ed2'>Credit Karma - Senior Software Engineer - Experimentation Platform</a></h5> 
-<p><span class="badge badge-light">London</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999692397673-staff-software-engineer-backend-java-ref17011j-visa-digital-developer-platform-vddp-'>Visa Staff Software Engineer, Backend Java (REF17011J) - Visa Digital Developer Platform (VDDP) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
